--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,7 +11,7 @@
   <body>
     <section class="main-content">
       <h1>{{ page.title }}</h1>
-      <p>{{ page.date }}</p>
+      <p>{{ page.date | date: "%A %m/%d/%Y" }}</p>
       <article>
         {{ content }}
       </article>
