--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,6 +15,7 @@
       <article>
         {{ content }}
       </article>
+      <a href="{{ site.baseurl }}">Back home</a>
       <footer class="site-footer">
         <span class="site-footer-credits">{{ site.footer }}</span>
       </footer>
