Update back home link post layout

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,7 +15,7 @@
       <article>
         {{ content }}
       </article>
-      <a href="{{ site.baseurl }}">Back home</a>
+      <a href="/index.html">Back home</a>
       <footer class="site-footer">
         <span class="site-footer-credits">{{ site.footer }}</span>
       </footer>
