--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,10 @@
       <div>
         {{ content }}
       </div>
+      <h2>Blog posts</h2>
+      {% for post in site.posts %}
+        <a href="{{ post.url }}">{{ post.title }}</a>
+      {% endfor %}	
       <section class="side">
         <h2>Full stack A-Z</h2>
         <ul>
