List for blog posts default layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,9 +19,11 @@
         {{ content }}
       </div>
       <h2>Blog posts</h2>
+      <ul>
       {% for post in site.posts %}
-        <a href="{{ post.url }}">{{ post.title }}</a>
+        <li><a href="{{ post.url }}">{{ post.title }}</a></li>
       {% endfor %}	
+      </ul>
       <section class="side">
         <h2>Full stack A-Z</h2>
         <ul>
